--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,8 @@
         }
       })(window.location);
     </script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
     <!-- End Single Page Apps for GitHub Pages -->
   </head>
   <body>
